--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,1 +1,49 @@
-<ion-nav [root]="rootPage"></ion-nav>
+<ion-menu [content]="content">
+  <ion-header>
+    <ion-toolbar>
+      <ion-title>Menu</ion-title>
+    </ion-toolbar>
+  </ion-header>
+
+ <ion-content class = "outer content">
+    <ion-list>
+      <ion-list-header>
+      User/Agent Login
+      </ion-list-header>
+      <ion-item>
+        <ion-icon name = 'ion-log-in' item-left></ion-icon>
+      </ion-item>
+        <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
+         {{p.title}}
+        </button>
+    </ion-list>
+
+    <ion-list>
+      <ion-list-header>
+      Location
+      </ion-list-header>
+      <ion-item>
+        <ion-icon name = 'ion-ios-location-outline' item-left></ion-icon>
+      </ion-item>
+        <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
+         {{p.title}}
+        </button>
+    </ion-list>
+
+    <ion-list>
+      <ion-list-header>
+      Properties Listing
+      </ion-list-header>
+      <ion-item>
+        <ion-icon name = 'ion-android-list' item-left></ion-icon>
+      </ion-item>
+        <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
+         {{p.title}}
+        </button>
+    </ion-list>
+  </ion-content>
+
+</ion-menu>
+
+<!-- Disable swipe-to-go-back because it's poor UX to combine STGB with side menus -->
+<ion-nav [root]="rootPage" #content swipeBackEnabled="false"></ion-nav>
